fix: minor fixes the dashboard screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Adaptive Analytics</title>
+    <title>Reactive Analytics</title>
   </head>
   <body>
     <div id="root"></div>
